# aiooctopusenergy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
aiooctopusenergy/: __init__.py  client.py  const.py  exceptions.py  graphql_client.py  models.py
tests/: conftest.py  test_client.py  test_daynight_rates.py  test_graphql_client.py  test_graphql_queries.py  test_models.py  test_product_detail.py  test_products.py
tests/fixtures/: account.json  applicable_rates_graphql.json  applicable_rates_page2.json  applicable_rates_paginated.json  consumption.json  consumption_daily.json  consumption_paginated_page1.json  consumption_paginated_page2.json  day_rates.json  grid_supply_points.json  night_rates.json  product_detail.json  products.json  rates.json  solar_estimate_graphql.json  standing_charges.json  tariff_comparison_graphql.json
